# game-framework

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
code/: CMakeLists.txt
code/game/: CMakeLists.txt
code/game/core/: CMakeLists.txt  main.cpp
libraries/: CMakeLists.txt
libraries/glad/: glad.c
libraries/glad/include/glad/: glad.h
modules/: CMakeLists.txt
modules/graphics/: CMakeLists.txt
modules/graphics/core/: CMakeLists.txt
modules/graphics/opengl/: CMakeLists.txt  commands.cpp  commands.hpp  debug.cpp  debug.hpp  functions.cpp  functions.hpp  object.cpp  object.hpp  pipeline.cpp  pipeline.hpp  private.hpp  vertex_array.cpp  vertex_array.hpp
modules/graphics/opengl/constants/: commands.hpp
modules/graphics/opengl/functions/: commands.hpp
