#=======================================================================================================================
project(graphics-module LANGUAGES CXX)
#=======================================================================================================================
add_library(graphics-module)
#=======================================================================================================================
add_subdirectory(opengl)
#=======================================================================================================================
add_subdirectory(core)
#=======================================================================================================================
