#=======================================================================================================================
target_link_libraries(${PROJECT_NAME} PRIVATE glad)
target_sources(${PROJECT_NAME} PRIVATE commands.cpp)
#=======================================================================================================================